# Hypo-Research

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PROJECT-SUMMARY.md  README.md  install-skills.sh  pyproject.toml
.claude-plugin/: marketplace.json
.claude/commands/: quick-search.md  review-results.md  survey.md
.opencode/: hypo-workflow.json
.pipeline/: HABITS.md  PROGRESS.compact.md  PROGRESS.md  config.yaml  cycle.yaml  derived-health.yaml  design-spec.md  log.yaml  reports.compact.md  rules.yaml  state.yaml
.plan-state/: decompose-cycle-2.yaml  decompose.yaml  discover-cycle-2.yaml  discover.yaml  generate-cycle-2.yaml  generate.yaml
docs/: developer.md  skill-usage-guide.md  user-guide.md
docs/reference/: cli.md
tests/: __init__.py  test_arxiv.py  test_auto_verify.py  test_bib_parser.py  test_bibtex.py  test_chapter_stats.py  test_check.py  test_check_cli.py  test_citations.py  test_config.py  test_config_integration.py  test_dedup.py  test_e2e_skill.py  test_fix_cli.py  test_fixer.py  test_guide.py  test_hooks.py  test_ideation_challenge.py  test_ideation_cli.py  test_ideation_experiment.py  test_ideation_models.py  test_ideation_pilot.py  test_ideation_planning.py  test_ideation_scoring.py  test_ideation_strategies.py  test_json_output.py  test_lint_cli.py  test_lint_stats.py  test_markdown_report.py  test_meeting_cli.py  test_meeting_glossary.py  test_meeting_inference.py  test_meeting_processor.py  test_meeting_templates.py  test_metadata.py  test_models.py  test_multi_query.py  test_multifile_cli.py  test_multifile_stats.py  test_openalex.py  (+33 more)
(+181 files in other folders)
