[project]
name = "hypo-research"
version = "0.1.1"
description = "Academic research assistant skill pack"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "feedparser>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[project.scripts]
hypo-research = "hypo_research.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypo_research"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["e2e: end-to-end integration tests"]
